<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bad">

    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/easy_level_button"
            android:text="@string/easy"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent_grey"
            style="?android:attr/borderlessButtonStyle" />

        <Button
            android:id="@+id/middle_level_button"
            android:text="@string/middle"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent_grey"
            style="?android:attr/borderlessButtonStyle" />

        <Button
            android:id="@+id/hard_level_button"
            android:text="@string/hard"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent_grey"
            style="?android:attr/borderlessButtonStyle" />

        <Button
            android:id="@+id/impossible_level_button"
            android:text="@string/impossible"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent_grey"
            style="?android:attr/borderlessButtonStyle" />

    </LinearLayout>

</RelativeLayout>