<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/permission_loading_block"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progress"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/text_status"
            android:text="@string/loading"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/app_management_block"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/recreate_permission_button"
            android:text="@string/recreate_permission"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            android:background="@color/transparent"
            android:layout_margin="8dp"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/start_app_button"
            android:text="@string/start_app"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            android:background="@color/transparent"
            android:layout_margin="8dp"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:id="@+id/target_app"
        android:textSize="12sp"
        android:layout_margin="16dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>