<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/game_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/western_village">

    <TextView
        android:id="@+id/bang_text_view"
        android:text="@string/bang"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24sp"
        android:visibility="invisible"
        android:layout_marginBottom="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>

    <LinearLayout
        android:id="@+id/game_end_block"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/back_button"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:background="@color/transparent_grey"
            android:layout_margin="8dp"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/repeat_button"
            android:text="@string/repeat"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:background="@color/transparent_grey"
            android:layout_margin="8dp"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/left_cowboy_area"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginBottom="16dp"
                android:layout_alignParentBottom="true">

                <ImageView
                    android:id="@+id/left_cowboy"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/cowboy_stand_left" />

                <Button
                    android:id="@+id/left_cowboy_ready_button"
                    android:text="@string/ready"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:textSize="20sp" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/right_cowboy_area"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="64dp"
                android:layout_marginBottom="16dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true">

                <ImageView
                    android:id="@+id/right_cowboy"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/cowboy_stand_right" />

                <Button
                    android:id="@+id/right_cowboy_ready_button"
                    android:text="@string/ready"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:textSize="20sp" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>